fixes #4794 - dojo._fade doesn't work on nodes with .foo { filter:alpha(opacity=0); } set in stylesheets in IE. (it reverts to the filter after fading to end: )
refs #5008 - the name and id attributes on the real input type="file" were removed mistakenly in an earlier revision.
need to use attributmap feature of dijit. also it seems like there is something still broken in IE6 with the post data, 
but for the life of me can't see where its going wrong. mostly fixes, but leaving open until can verify ie6/7 is 
posting the file data.



git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@11446 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/widget/FileInput/FileInput.css
+++ b/widget/FileInput/FileInput.css
@@ -20,14 +20,11 @@
 	border:1px solid #333;
 	padding:2px 12px 2px 12px; 
 	cursor:pointer;
-
 }
+
 .dijitFileInputButton {
-	opacity:0;
-	filter:alpha(opacity:0);
 	z-index:3;
 	visibility:hidden;
-	
 }
 .dijitFakeInput { position:absolute; top:0; left:0; z-index:1; }
 
@@ -79,5 +76,4 @@
 	border:1px solid #333;
 	padding:2px 12px 2px 12px;
 	background:#b7cdee url('../../../dijit/themes/soria/images/gradientTopBg.png') repeat-x; 
-
 }
